Bug 303492 - Adding an end foot note and then the page count, doesn't works correctly
Summary: Adding an end foot note and then the page count, doesn't works correctly
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.3
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: T Zachmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-13 17:48 UTC by Maximiliano
Modified: 2015-01-25 23:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maximiliano 2012-07-13 17:48:26 UTC
When you add it and want to remove it you are unable to remove it and it just keeps there...
tested on Calligra Words 2.4.3

And it  add 2 page count (it's an "i" char)

Reproducible: Always

Steps to Reproduce:
1.put end note foot
2.add page count
3. try to remove it
Actual Results:  
can't remove the page count

Expected Results:  
to add the page counter at the end of the page
Comment 1 Camilla Boemann 2015-01-22 23:43:01 UTC
confirmed in 2.9 beta
Comment 2 Elvis Stansvik 2015-01-25 23:07:17 UTC
Git commit f40bbcbbb0cadf27ac18470b63fb18332631873f by Elvis Stansvik.
Committed on 25/01/2015 at 23:06.
Pushed by astan into branch 'calligra/2.9'.

Remove inline objects from manager in DeleteCommand.
REVIEW: 122254

M  +7    -2    libs/kotext/commands/DeleteCommand.cpp
M  +1    -1    libs/kotext/commands/DeleteCommand.h

http://commits.kde.org/calligra/f40bbcbbb0cadf27ac18470b63fb18332631873f