Remove inline objects from manager in DeleteCommand.

BUG: 303492
REVIEW: 122254